Add ability to mute a chrome tab

With the new site muting feature, "Mute tab" in the tab dropdown was
replaced with "Mute site", which mutes via a content setting. There are
no content settings for chrome:// urls, so this CL adds a check in the
muting logic and properly handles muting chrome:// urls.

Bug: 782134
Change-Id: Ib95027b3124ae75e49ab6f32556e73d4f2918d04